# hematite

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: architecture.md  codebase-guide.md  glossary.md  objectives_1_to_5_run.md  query-walkthrough.md  sql-dialect.md  sqlite-btree-pager-rust.md  sqlite-codegen-vdbe-optimizer-rust.md  storage-format-spec.md  storage-refactor-board.md  storage-refactor-plan.md
src/: architecture_tests.rs  error.rs  lib.rs  main.rs  test_utils.rs  tests.rs
src/btree/: bytes.rs  cell_format.rs  codec.rs  compaction.rs  cursor.rs  index.rs  mod.rs  node.rs  page_format.rs  tests.rs  tree.rs  typed.rs  value_store.rs
src/catalog/: catalog.rs  catalog_new.rs  column.rs  cursor.rs  engine.rs  engine_metadata.rs  header.rs  ids.rs  index_btree.rs  index_store.rs  integrity.rs  mod.rs  object.rs  record.rs  row_id.rs  runtime_metadata.rs  schema.rs  schema_store.rs  serialization.rs  table.rs  table_btree.rs  table_store.rs  tests.rs  types.rs
src/cli/: mod.rs  tests.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  tests.rs  types.rs
src/query/: executor.rs  logest.rs  lowering.rs  metadata.rs  mod.rs  optimizer.rs  plan.rs  planner.rs  predicate.rs  rewrite.rs  runtime.rs  tests.rs  validation.rs
src/sql/: connection.rs  interface.rs  mod.rs  result.rs  script.rs  tests.rs
src/storage/: buffer_pool.rs  cursor.rs  database.rs  engine.rs  file_manager.rs  format.rs  free_list.rs  index_btree.rs  index_cache.rs  journal.rs  journal_v3.rs  metadata_page.rs  (+15 more)
tests/: sqllogictest.rs
(+25 files in other folders)
