[package]
name = "hematite-rs"
version = "0.1.0"
edition = "2021"
description = "A small embeddable SQL database."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/hematite-rs"
repository = "https://github.com/nathy-cpu/hematite"
keywords = ["database", "sql", "embedded", "storage"]
categories = ["database-implementations"]

[lib]
name = "hematite"
path = "src/lib.rs"

[[bin]]
name = "hematite_cli"
path = "src/main.rs"

[dependencies]
